fuse_esb_proto/target/classes/META-INF/fabric8/openshift/fuse75-spring-boot-camel-amq-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 05a9b5db028af6505eff136b49cdd660fd2e6c93
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fuse75-spring-boot-camel-amq&var-version=1.0-SNAPSHOT
  labels:
    app: fuse75-spring-boot-camel-amq
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: org.example.fis
  name: fuse75-spring-boot-camel-amq
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fuse75-spring-boot-camel-amq
    provider: fabric8
    group: org.example.fis
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 05a9b5db028af6505eff136b49cdd660fd2e6c93
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fuse75-spring-boot-camel-amq&var-version=1.0-SNAPSHOT
      labels:
        app: fuse75-spring-boot-camel-amq
        provider: fabric8
        version: 1.0-SNAPSHOT
        group: org.example.fis
    spec:
      containers:
      - env:
        - name: AMQP_SERVICE_NAME
          valueFrom:
            configMapKeyRef:
              key: service.host
              name: spring-boot-camel-amq-config
        - name: AMQP_SERVICE_PORT
          valueFrom:
            configMapKeyRef:
              key: service.port.amqps
              name: spring-boot-camel-amq-config
        - name: AMQP_PARAMETERS
          value: transport.trustAll=true&transport.verifyHost=false&amqp.idleTimeout=120000
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: fis/fuse75-spring-boot-camel-amq:snapshot-200819-095849-0915
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
