fuse_esb_proto/target/classes/META-INF/fabric8/openshift/fuse75-spring-boot-camel-amq-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 0659310ea452d5b35edb6f00b24b272b0296468c
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    app: fuse75-spring-boot-camel-amq
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: org.example.fis
  name: fuse75-spring-boot-camel-amq
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fuse75-spring-boot-camel-amq
    provider: fabric8
    group: org.example.fis
