fuse_esb_proto/target/classes/META-INF/fabric8/openshift/fuse75-spring-boot-camel-amq-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: fuse75-spring-boot-camel-amq
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: org.example.fis
  name: fuse75-spring-boot-camel-amq
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fuse75-spring-boot-camel-amq
